Features : Added Many the Features for Manager like Task Assignment, Project Details , Adding Member to Project , etc